# jupyter_poetry

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
works/: numpyro_sample.ipynb  sample.py  test.ipynb
