[tool.poetry]
name = "works"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpyro = "^0.13.2"
arviz = "^0.16.1"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
ruff = "^0.1.7"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["works"]

# Same as Black
line-length = 88

